# PrivacyBench

./: .gitnore  README.md  command.sh  pyproject.toml
cli/: __init__.py  main.py  parser.py  resolver.py  validator.py
cli/commands/: __init__.py  list.py  run.py  validate.py
configs/: schema.yaml
configs/experiments/baselines/: cnn_alzheimer.yaml
core/: __init__.py  datasets.py  models.py  pipeline.py  registry.py
core/datasets/: __init__.py  alzheimer.py  base.py  custom.py  skin_leisons.py
core/models/: __init__.py  base.py  cnn.py  vit.py
core/privacy/: __init__.py  base.py  differential.py  federated.py  smpc.py
core/tracking/: __init__.py  logging.py  metrics.py
execution/: __init__.py  manager.py
legacy/: FL_client.py  FL_server.py  __init__.py  federated.py  local_utility.py  privacy_engine.py  tracker.py  train.py  traindp.py  trainn.py
privacybench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
